[project]
name = "tinyoscquery"
version = "0.1.0"
description = "OSCQuery library to advertise an Open Sound Control (OSC) service"
authors = [
    { name = "Cyberkitsune", email = "" },
    { name = "Frank Klein", email = "" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENCE"]
requires-python = ">=3.12"
dependencies = [
    "python-osc>=1.9.3",
    "requests>=2.32.5",
    "zeroconf>=0.39.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", ]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
